# pythonProject

./: .gitignore  pyproject.toml
my_page/: db.sqlite3
my_page/horoscope/: admin.py  models.py  urls.py  views.py
my_page/horoscope/migrations/: 0001_initial.py  0002_rename_names_zodiac_name_alter_zodiac_information.py  0003_person.py  0004_delete_person.py
my_page/my_page/: settings.py  urls.py
my_page/templates/: index.html
my_page/users/migrations/: 0001_initial.py
